# zlink

./: .clang-tidy  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CXX20_BUILD_EXAMPLES.md  CXX_BUILD_EXAMPLES.md  Dockerfile  Doxygen.cfg  GEMINI.md  INSTALL  NEWS  README.doxygen.md  README.md  SECURITY.md  SupportedPlatforms.md  VERSION  appveyor.yml  build.sh  ci_build.sh  ci_deploy.sh  existing_tests.txt  router_test  router_test.cpp  test_asio_fix.cpp  test_blocking.cpp  test_debug.cpp  test_proper.cpp  test_raw_bytes.cpp  test_simple.cpp  version.sh
.claude/: settings.json  (+1 more)
benchwithbeast/: CMakeLists.txt
benchwithzlink/: .gitignore  CMakeLists.txt  run_benchmarks.ps1  run_benchmarks.sh  run_comparison.py
benchwithzlink-baseline/: BENCHMARK_RESULTS.md  CMakeLists.txt  PERFORMANCE_BASELINE.md  analyze_results.py  libzlink_cache.json  results_10x.csv  run_benchmarks.ps1  run_benchmarks.sh  run_benchmarks_10x.ps1  run_benchmarks_zlink.sh  run_benchmarks_zlink_ab.sh  run_comparison.py  run_comparison_zlink.py  run_comparison_zlink_ab.py  run_zlink_only.ps1  windows_BENCHMARK_RESULTS.md  windows_VARIANCE_ANALYSIS.md  zlink_BENCHMARK_RESULTS.md  zlink_results.csv
benchwithzlink-baseline/baseline/20260121/: bench_ALL_20260121_104120.txt  bench_ALL_20260121_141453_zmp_v1.txt  bench_ALL_20260121_141758.txt  bench_ALL_20260121_152423.txt  bench_ALL_20260121_155822.txt  bench_ALL_20260121_180305.txt  bench_ALL_20260121_180337.txt  bench_ALL_20260121_180732.txt  bench_ALL_20260121_184632.txt  bench_ALL_20260121_185738.txt  bench_ALL_20260121_194413.txt
benchwithzlink-baseline/baseline/20260122/: bench_linux_ALL_20260122_092113.txt
benchwithzlink-baseline/baseline/20260124/: bench_linux_ALL_20260124_101416.txt  bench_linux_ALL_20260124_101908.txt  bench_linux_ALL_20260124_105245.txt  bench_linux_ALL_20260124_152322.txt
benchwithzlink-baseline/common/: bench_common.hpp
benchwithzlink-baseline/zlink/: bench_zlink_dealer_dealer.cpp  bench_zlink_dealer_router.cpp  bench_zlink_pair.cpp  bench_zlink_pubsub.cpp  bench_zlink_router_router.cpp  bench_zlink_router_router_poll.cpp
benchwithzlink/baseline/: bench_baseline_dealer_dealer.cpp  bench_baseline_gateway.cpp  bench_baseline_pubsub.cpp  bench_baseline_router_router_poll.cpp  bench_baseline_spot.cpp  bench_baseline_stream.cpp
benchwithzlink/common/: bench_common.hpp
benchwithzlink/current/: bench_current_dealer_dealer.cpp  bench_current_dealer_router.cpp  bench_current_gateway.cpp  bench_current_pair.cpp  bench_current_pubsub.cpp  bench_current_router_router.cpp  bench_current_router_router_poll.cpp  bench_current_stream.cpp
benchwithzlink/results/20260123/: bench_linux_ALL_20260123_170718.txt  bench_linux_STREAM_20260123_193854.txt
benchwithzlink/results/20260124/: bench_linux_ALL_20260124_053843.txt  bench_linux_ALL_20260124_060019.txt  bench_linux_ALL_20260124_075130.txt  bench_linux_ALL_20260124_111810.txt  bench_linux_ALL_20260124_154903.txt
benchwithzlink/results/20260129/: bench_linux_ALL_20260129_083806.txt  bench_linux_ALL_20260129_184803.txt
benchwithzlink/results/20260131/: bench_linux_ALL_20260131_161102.txt  bench_linux_GATEWAY_20260131_192426.txt  bench_linux_GATEWAY_20260131_195658.txt  bench_linux_STREAM_20260131_180143.txt
benchwithzmq/: BENCHMARK_RESULTS.md  CMakeLists.txt  COMPARISON_RESULTS.md  PERFORMANCE_BASELINE.md  analyze_results.py  libzmq_cache.json  run_benchmarks.ps1  run_benchmarks.sh  run_benchmarks_10x.ps1  run_benchmarks_zmq.sh  run_benchmarks_zmq_ab.sh  run_comparison.py  run_comparison_zmq.py  run_comparison_zmq_ab.py  run_zlink_only.ps1  test_tcp_stream_std.cpp  test_tcp_stream_zlink.cpp  windows_BENCHMARK_RESULTS.md
benchwithzmq/baseline/20260121/: bench_ALL_20260121_104120.txt  bench_ALL_20260121_141453_zmp_v1.txt  bench_ALL_20260121_141758.txt
benchwithzmq/baseline/20260124/: bench_linux_ALL_20260124_101908.txt
benchwithzmq/baseline/20260129/: bench_linux_ALL_20260129_194404.txt
benchwithzmq/baseline/20260130/: bench_linux_ALL_20260130_005510.txt  (+1 more)
benchwithzmq/common/: bench_common.hpp
benchwithzmq/libzmq/: bench_zmq_dealer_dealer.cpp  bench_zmq_dealer_router.cpp  bench_zmq_pair.cpp  bench_zmq_pubsub.cpp  bench_zmq_router_router.cpp  bench_zmq_router_router_poll.cpp
benchwithzmq/zlink/: bench_zlink_dealer_dealer.cpp  bench_zlink_dealer_router.cpp  bench_zlink_pair.cpp  bench_zlink_pubsub.cpp  bench_zlink_router_router.cpp  bench_zlink_router_router_poll.cpp
bindings/cpp/: API_DRAFT.md  CMakeLists.txt  PLAN.md  TESTING.md  build.sh
bindings/python/: pyproject.toml
core/benchwithzlink/: CMakeLists.txt  analyze_results.py  run_benchmarks.ps1  run_benchmarks.sh  run_comparison.py
tests/: CMakeLists.txt  README.md  run_tests.ps1  run_tests.sh  test_abstract_ipc.cpp  test_ancillaries.cpp  test_asio_batching.cpp  test_asio_compaction.cpp  test_asio_connect.cpp  test_asio_error_recovery.cpp  test_asio_handshake_boundary.cpp  test_asio_partial_read.cpp  test_asio_partial_write.cpp  test_asio_poller.cpp  test_asio_ssl.cpp  test_asio_tcp.cpp  test_asio_ws.cpp  test_asio_zerocopy.cpp  test_basic.c  test_bind_ws_fuzzer.cpp  test_capabilities.cpp  test_connect_null_fuzzer.cpp  test_connect_resolve.cpp  test_connect_rid.cpp  test_ctx_destroy.cpp  test_ctx_options.cpp  test_curve.c  test_diffserv.cpp  test_disconnect_inproc.cpp  test_getsockopt_memset.cpp  test_heartbeats.cpp  test_immediate.cpp  test_ipc_wildcard.cpp  test_issue_566.cpp  test_mock_pub_sub.cpp  test_monitor.cpp  test_pair_ipc.cpp  test_pair_tcp.cpp  test_probe_router.cpp  test_proxy.cpp  (+24 more)
tests/certs/: test_certs.hpp
tests/discovery/: test_gateway.cpp  test_service_discovery.cpp  test_service_discovery_basic.cpp  test_service_discovery_tcp.cpp
tests/monitoring/: test_monitor_enhanced.cpp  test_socket_stats_ex.cpp
tests/pgm/: test_pgm_epgm.cpp  test_pgm_smoke.cpp
tests/request/: test_request_reply_api.cpp
tests/routing-id/: test_connect_rid_string_alias.cpp
tests/spot/: test_spot_pubsub_basic.cpp
tests/threadsafe/: test_thread_safe_socket.cpp
(+1369 files in other folders)
